--- a/index.html
+++ b/index.html
@@ -12,17 +12,31 @@
   <title>Frontend Mentor | 3-column preview card component</title>
 </head>
 <body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
-
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
+  <div class="grid">
+    <div class="grid__item grid__item--orange">
+      <img src="./images/icon-sedans.svg" alt="Sedans">
+      <h2>Sedans</h2>
+      <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+      <div class="action">
+        <button class="btn">Learn More</button>
+      </div>
+    </div>
+    <div class="grid__item grid__item--light-cyan">
+      <img src="./images/icon-suvs.svg" alt="SUVS">
+      <h2>Suvs</h2>
+      <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
+      <div class="action">
+        <button class="btn">Learn More</button>
+      </div>
+    </div>
+    <div class="grid__item grid__item--dark-cyan">
+      <img src="./images/icon-luxury.svg" alt="Luxury">
+      <h2>Luxury</h2>
+      <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
+      <div class="action">
+        <button class="btn">Learn More</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
